@@ -115,7 +115,7 @@ public final class TemporalAccessorParser implements Parser<TemporalAccessor> {
 			}
 			if (this.source != null) {
 				throw new DateTimeParseException(
-						String.format("Unable to parse date time value \"%s\" using configuration from %s", text, this.source),
+						"Unable to parse date time value \"%s\" using configuration from %s".formatted(text, this.source),
 						text, ex.getErrorIndex(), ex);
 			}
 			// else rethrow original exception
